@@ -1,10 +1,10 @@
 
 package es.jor.phd.xvgdl.context.xml;
 
-import es.indra.eplatform.properties.Properties;
-import es.indra.eplatform.util.log.ELogger;
+import com.fasterxml.jackson.dataformat.xml.annotation.JacksonXmlProperty;
 import es.jor.phd.xvgdl.model.endcondition.IGameEndCondition;
-import es.jor.phd.xvgdl.util.GameConstants;
+import lombok.Data;
+import lombok.extern.slf4j.Slf4j;
 
 /**
  * Game End Condition XML element Definition
@@ -12,18 +12,20 @@ import es.jor.phd.xvgdl.util.GameConstants;
  * @author jrquinones
  *
  */
-public class GameEndConditionDefinition extends Properties {
+@Slf4j
+@Data
+public class GameEndConditionDefinition {
 
-    /** XML main tag. */
-    public static final String XMLTAG = "endCondition";
-
-    /** XML Attribute. Class Name. */
-    public static final String XMLATTR_CHECKER_CLASS = "checkerClass";
-
-    @Override
-    public void setXMLAttr(String key, String value) {
-        setProperty(key, value);
-    }
+    @JacksonXmlProperty(isAttribute = true)
+    private String checkerClass;
+    @JacksonXmlProperty(isAttribute = true)
+    private String objectNames;
+    @JacksonXmlProperty(isAttribute = true)
+    private Boolean winningCondition;
+    @JacksonXmlProperty(isAttribute = true)
+    private String property;
+    @JacksonXmlProperty(isAttribute = true)
+    private String value;
 
     /**
      *
@@ -32,19 +34,14 @@ public class GameEndConditionDefinition extends Properties {
      */
     public static IGameEndCondition convert(GameEndConditionDefinition endConditionDefinition) {
 
-    	IGameEndCondition gameEndCondition = null;
-
         try {
-        	gameEndCondition = (IGameEndCondition) Class.forName(
-                    endConditionDefinition.getProperty(XMLATTR_CHECKER_CLASS)).newInstance();
+            IGameEndCondition gameEndCondition = (IGameEndCondition) Class.forName(
+                    endConditionDefinition.getCheckerClass()).getDeclaredConstructor().newInstance();
             gameEndCondition.setGameEndConditionDefinition(endConditionDefinition);
-
+            return gameEndCondition;
         } catch (Exception e) {
-            ELogger.error(GameEndConditionDefinition.class, GameConstants.GAME_CONTEXT_LOGGER_CATEGORY,
-                    "Exception converting GameEndConditionDefinition to IGameEndCondition: " + e.getMessage(), e);
-            gameEndCondition = null;
+            log.error("Exception converting GameEndConditionDefinition to IGameEndCondition: " + e.getMessage(), e);
+            return null;
         }
-
-        return gameEndCondition;
     }
 }
